done wwith show password

--- a/app/src/main/res/layout/activity_catering_by_intent.xml
+++ b/app/src/main/res/layout/activity_catering_by_intent.xml
@@ -578,7 +578,7 @@
         <RadioGroup
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             >
             <RadioButton
                 android:layout_width="wrap_content"
@@ -594,7 +594,27 @@
                 android:onClick="onRadioButtonClicked"
                 android:text="Pay On Service"></RadioButton>
 
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/pay_on_credentials_catering"
+                android:onClick="onRadioButtonClicked"
+                android:text="Pay Explicitly With Our Credential"></RadioButton>
+
+
         </RadioGroup>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Account No -37880460223\nBank Holder Name:LOKESH JITENDRA PATIL\nBank Name :STATE BANK OF INDIA\nBranch COde :272\nIFSC Code :SBIN0000272"
+            android:id="@+id/account_details_catering"></TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="You Bill Amount :"
+            android:id="@+id/bill_amount_catering"></TextView>
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
