--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -191,7 +191,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Design Invitation Card"
+                        android:text="Design Birthday Invitation Card"
                         android:textStyle="bold"
                         android:textSize="20dp"
                         android:gravity="center"
