--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -24,16 +24,17 @@
 
     <EditText
         android:id="@+id/editMail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:background="@drawable/edit_text_border"
+        android:layout_height="40dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="156dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
+        android:backgroundTint="@android:color/darker_gray"
         android:ems="10"
         android:hint="E-mail Id "
-        android:backgroundTint="@android:color/darker_gray"
 
         android:inputType="textPersonName"
         android:textColor="@color/white"
@@ -47,8 +48,9 @@
 
     <EditText
         android:id="@+id/editPass"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:background="@drawable/edit_text_border"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="48dp"
@@ -57,15 +59,30 @@
         android:backgroundTint="@android:color/darker_gray"
         android:ems="10"
         android:hint="Password"
-        android:textStyle="italic"
         android:inputType="textPassword"
         android:textColor="@color/white"
         android:textColorHint="#FFFFFF"
         android:textSize="24sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editMail" />
 
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Show Password"
+        android:textColor="@color/white"
+        android:layout_marginTop="2dp"
+        android:id="@+id/check_box_show_password"
+
+        app:layout_constraintBottom_toTopOf="@+id/forgot"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.82"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editPass"
+        app:layout_constraintVertical_bias="0.0"></CheckBox>
 
     <Button
         android:id="@+id/btNew"
@@ -73,8 +90,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="92dp"
         android:background="@color/black"
-        android:text="New User?"
         android:backgroundTint="@android:color/holo_red_light"
+        android:text="New User?"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,13 +99,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btLogin"
         app:layout_constraintVertical_bias="0.164" />
+
     <Button
         android:id="@+id/btLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="432dp"
 
-       android:backgroundTint="@android:color/holo_red_light"
+        android:backgroundTint="@android:color/holo_red_light"
 
         android:text="Log-In"
         android:textColor="@color/black"
