--- a/app/src/main/res/layout/admincateringitem.xml
+++ b/app/src/main/res/layout/admincateringitem.xml
@@ -312,7 +312,12 @@
                 android:text="Failed"
                 android:id="@+id/admin_failed_catering"
                 android:backgroundTint="@android:color/holo_red_dark"></Button>
-
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Partially Done"
+                android:backgroundTint="@color/purple_700"
+                android:id="@+id/admin_partial_catering"></Button>
 
         </LinearLayout>
 
