--- a/app/src/main/res/layout/activity_reset.xml
+++ b/app/src/main/res/layout/activity_reset.xml
@@ -1,38 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/forgot"
+
+
     android:layout_height="match_parent"
+
     tools:context=".Reset">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:orientation="vertical"
+        >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:textSize="45sp"
+        android:text="We secure with professionalism."
+        android:fontFamily="cursive"
+        android:layout_gravity="center"
+        android:gravity="center"></TextView>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:layout_gravity="center"
+        android:text="Provide Here Your Registred Email Address"
+        android:textSize="20sp"
+        android:layout_marginTop="50dp"></TextView>
 
     <EditText
         android:id="@+id/resetMail"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginTop="300dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:ems="10"
+        android:textColor="@color/white"
+        android:gravity="center"
         android:hint="Enter Registred Email  Address"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColorHint="@color/white" />
 
     <Button
         android:id="@+id/resetBt"
         android:layout_width="wrap_content"
         android:layout_height="43dp"
-        android:layout_marginTop="76dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/black"
+
         android:text="Send Recovery Email"
-        android:background="@color/black"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resetMail" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:textColor="@color/black"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#F60707"
+        android:layout_marginTop="15dp"
+        android:textSize="20sp"
+        android:text="Note :-  Password Reset Link Will Be Sent To Your Registered Mail Address And You Can Reset Your Password By there."></TextView>
+    </LinearLayout>
+</ScrollView>
