--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -139,11 +139,11 @@
         android:id="@+id/forgot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
-        android:text="Forgot Password ?"
+        android:layout_marginTop="132dp"
+       android:text="@string/forgot"
         android:textColor="#FFFFFF"
 
-        android:textSize="18sp"
+        android:textSize="21sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
