--- a/app/src/main/res/layout/activity_new_reg.xml
+++ b/app/src/main/res/layout/activity_new_reg.xml
@@ -101,8 +101,8 @@
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:ems="10"
-        android:hint="District"
-        android:inputType="textPersonName"
+        android:hint="Pin-Code"
+        android:inputType="phone"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
