--- a/app/src/main/res/layout/photgrapherorderitem.xml
+++ b/app/src/main/res/layout/photgrapherorderitem.xml
@@ -244,7 +244,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
