--- a/app/src/main/res/layout/activity_admin_show_user_details_and_orders.xml
+++ b/app/src/main/res/layout/activity_admin_show_user_details_and_orders.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    app:cardElevation="8dp"
+    app:cardCornerRadius="8dp"
+    android:layout_margin="16dp"
     tools:context=".AdminShowUserDetailsAndOrders">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+
         android:orientation="vertical">
 
         <LinearLayout
@@ -31,7 +34,7 @@
                 android:id="@+id/tvUidAdmin_new"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
+
                 android:text="user_id"
                 android:textColor="@color/black"
                 android:textSize="20sp" />
@@ -166,4 +169,4 @@
     </LinearLayout>
 
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
