--- a/app/src/main/res/layout/activity_admin_show_user_details_and_orders.xml
+++ b/app/src/main/res/layout/activity_admin_show_user_details_and_orders.xml
@@ -3,18 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     app:cardElevation="8dp"
     app:cardCornerRadius="8dp"
     android:layout_margin="16dp"
     tools:context=".AdminShowUserDetailsAndOrders">
 
+
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
         android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:layout_gravity="center"
+            android:gravity="center"
+
+            android:text="User Details"
+            android:textColor="@color/black"
+            android:textStyle="bold"></TextView>
+
 
         <LinearLayout
             android:layout_width="wrap_content"
