--- a/app/src/main/res/layout/activity_admin_view_photographer.xml
+++ b/app/src/main/res/layout/activity_admin_view_photographer.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Photographer Bookings"
+        android:background="@android:color/holo_orange_dark"
         android:textColor="@color/black"
         android:textSize="23sp"
         android:textStyle="bold"
@@ -19,6 +20,7 @@
         android:id="@+id/admin_photographer_order_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/darker_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
