--- a/app/src/main/res/layout/activity_decore_event_by_intent.xml
+++ b/app/src/main/res/layout/activity_decore_event_by_intent.xml
@@ -106,8 +106,10 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:background="@android:color/holo_orange_dark"
                     android:text="Select Date Of Your Event" />
 
 
